fixing image stretch workshops

--- a/src/app/Pages/hackathon/hackathon.component.scss
+++ b/src/app/Pages/hackathon/hackathon.component.scss
@@ -301,31 +301,60 @@
       }
   }
 
+  @media only screen and (max-width:1200px) {
+   .overlap{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+   }
+   .text{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  .overlap img{
+    width: 90%;
+    height: 60%;
+  }
+  .def{
+    width: 5000px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .text{
+    
+  }
+  
+  }
     .text{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-top: 15%; 
-        margin-left: -20%;
+      height: 40%;
+      padding-top: 15%; 
+      margin-left: -180px;
+      width: 600px;
     }
     .def{
-     
-        color: rgba(255, 255, 255, 0.925);
+    margin-bottom: 100px;
+    color: rgba(255, 255, 255, 0.925);
     font-size: 20px;
-    width: 80%;
     background-color: rgba(0, 0, 0, 0.638);
-    padding: 50px 70px 50px 70px;
+    padding: 40px 60px 40px 60px;
+    height: 60%;
+    width: 100%;
     }
+
     img{
-        display: block;
         width: 60%;
-       padding-top: 10%;
-       padding-left: 5%;
+        height: 40%;
+       padding-top: 8%;
+       padding-left: 2%;
     }
     .overlap{
+        padding-top: 2%;
         display: flex;
-        flex-direction: row;
-        padding-bottom: 10%;
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 5%;
     }
     span{
         color: $pink;
@@ -340,4 +369,9 @@
       padding-right: 10%;
       padding-bottom: 10%;
       padding-top: 10%;
+    }
+    @media only screen and (max-width:750px) {
+      .count {
+        display: none;
+      }
     }
